improvements for some Linux desktops
fixes #25 & #26